Remove logResponse String builder during all http requests